made navbar collapsable

--- a/index.html
+++ b/index.html
@@ -198,13 +198,31 @@
 </head>
 
 <body>
+
     <div class="container nav-wrapper position-sticky top-0 z-1">
         <nav class="navbar navbar-expand-lg navbar-custom d-flex justify-content-between">
-            <div class="navbar-brand">JEROME</div>
-            <div class="navbar-nav d-flex flex-row">
-                <a class="nav-link" href="#">HOME</a>
-                <a class="nav-link" href="#about">ABOUT ME</a>
-                <a class="nav-link" href="#contact">CONTACT ME</a>
+            <a class="navbar-brand" href="#">JEROME</a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
+                aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse justify-content-end" id="navbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">ABOUT ME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#activities.html">ACTIVITIES</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">CONTACT</a>
+                    </li>
+                </ul>
             </div>
         </nav>
     </div>
@@ -214,7 +232,7 @@
             <div class="col">
                 <div class="intro-card shadow row align-items-center justify-content-justify">
                     <div class="intro-text col text-center text-md-start mb-4 mb-md-0">
-                        <h1>Hello, I am <i>Jerome Mercado</i>!</h1>
+                        <h1>Hello, I am <i>Jerome</i>!</h1>
                         <p>UI/UX DESIGNER & PROGRAMMER</p>
                     </div>
 
