added project 3 and made few adjustments

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         </div>
     </div>
 
-    <div class="container">
+    <div id="about" class="container">
         <div class="row">
             <div class="col">
-                <div id="about" class="about-card m-5">
+                <div class="about-card m-5">
                     <h1>ABOUT ME</h1>
                     <h2>Who am I?</h2>
                     <p>I am <b>Jerome</b>, a <b>third-year</b> college student at the <b>Polytechnic University of the
@@ -77,28 +77,29 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-12 col-md-10">
-                <div class="abt-card shadow">
-                    <div class="row align-items-center">
-                        <div class="col-12 col-md-5 text-center">
-                            <img src="assets/images/formal_picture.png" class="img-fluid rounded-4" alt="Jerome">
-                        </div>
-                        <div class="col-12 col-md-7 about-details px-4">
-                            <h4><b>NAME:</b> Jerome Mercado</h4>
-                            <h4><b>NICKNAME:</b> Jiro</h4>
-                            <h4><b>AGE:</b> 20</h4>
-                            <h4><b>SCHOOL:</b> Polytechnic University of the Philippines</h4>
-                            <h4><b>ADDRESS:</b> Tanauan, Batangas</h4>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-10">
+                    <div class="abt-card shadow">
+                        <div class="row align-items-center">
+                            <div class="col-12 col-md-5 text-center">
+                                <img src="assets/images/formal_picture.png" class="img-fluid rounded-4" alt="Jerome">
+                            </div>
+                            <div class="col-12 col-md-7 about-details px-4">
+                                <h4><b>NAME:</b> Jerome Mercado</h4>
+                                <h4><b>NICKNAME:</b> Jiro</h4>
+                                <h4><b>AGE:</b> 20</h4>
+                                <h4><b>SCHOOL:</b> Polytechnic University of the Philippines</h4>
+                                <h4><b>ADDRESS:</b> Tanauan, Batangas</h4>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
+
 
     <div class="container">
         <div class="row">
@@ -119,7 +120,7 @@
                         <p class="card-text">A simple website showcasing the features of the latest iPhone 15.
                         </p>
                         <a href="https://jeromepmercado.github.io/first-project/" target="blank"
-                            rel="noopener noreferrer" class="btn btn-primary">Visit Website </a>
+                            rel="noopener noreferrer" class="web-btn btn-primary">Visit Website </a>
                     </div>
                 </div>
             </div>
@@ -132,11 +133,26 @@
                         <p class="card-text">A simple website showcasing the beauty and story of Amsterdam.
                         </p>
                         <a href="https://jeromepmercado.github.io/second-project/" target="blank"
-                            rel="noopener noreferrer" class="btn btn-primary">Visit Website </a>
+                            rel="noopener noreferrer" class="web-btn btn-primary">Visit Website </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center projects-section">
+                <div class="card shadow" style="width: 20rem;">
+                    <img src="assets/images/demon_slayer.png" class="card-img-top" alt="Demon Slayer">
+                    <div class="card-body align">
+                        <h4 class="card-title">Demon Slayer</h4>
+                        <p class="card-text">A simple website showcasing the arcs and remarkable characters of Demon
+                            Slayer.
+                        </p>
+                        <a href="https://jeromepmercado.github.io/third-project/" target="blank"
+                            rel="noopener noreferrer" class="web-btn btn-primary">Visit Website </a>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
     </div>
 
