added fourth project

--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
                 </div>
             </div>
 
+        </div>
+
+        <div class="row d-flex justify-content-center align-items-center g-4 mb-5">
+
             <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center projects-section">
                 <div class="card shadow" style="width: 20rem;">
                     <img src="assets/images/demon_slayer.png" class="card-img-top" alt="Demon Slayer">
@@ -147,6 +151,20 @@
                             Slayer.
                         </p>
                         <a href="https://jeromepmercado.github.io/third-project/" target="blank"
+                            rel="noopener noreferrer" class="web-btn btn-primary">Visit Website </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center projects-section">
+                <div class="card shadow" style="width: 20rem;">
+                    <img src="assets/images/dragon_ball.png" class="card-img-top" alt="Demon Slayer">
+                    <div class="card-body align">
+                        <h4 class="card-title">Dragon Ball</h4>
+                        <p class="card-text">A simple website showcasing the remarkable characters of Dragon Ball
+                            through API integration.
+                        </p>
+                        <a href="https://jeromepmercado.github.io/fourth-project/" target="blank"
                             rel="noopener noreferrer" class="web-btn btn-primary">Visit Website </a>
                     </div>
                 </div>
